package com.zipcodewilmington.froilansfarm.Animal;


public interface NoiseMaker {

        public String makeNoise();

    boolean makesNoise();

}
