package com.zipcodewilmington.froilansfarm;

public class Edible extends Crop{


    public Edible(Produce typeOfProduce) {
        super(typeOfProduce);
    }

    public void tomato(){

    }
    public void earCorn(){

    }
    public void egg(){

    }
}
