package com.zipcodewilmington.froilansfarm.Interfaces;

public interface Rideable {

    void riding();
    void endRiding();

}
