package com.zipcodewilmington.froilansfarm;

import com.zipcodewilmington.froilansfarm.food.Edible;

import java.util.ArrayList;

public interface Produce {

    Edible yield();

}
