package com.zipcodewilmington.froilansfarm.animals;

import com.zipcodewilmington.froilansfarm.interfaceBehaviors.Edible;

public interface Eater {
    void eat(Edible edible);
}
