package interfaces;

public interface FarmVehicles {
}
